# 2022cpl

./: LICENSE  README.md
0-intro/: CMakeLists.txt  guess.c  sizeof.c
homework/: CMakeLists.txt  D.c  Equation.c  Julian.c  Quick-sort.c  absolute.c  change.c  collatz.c  decimal.c  factorial.c  flip.c  gravity.c  help20.c  integration.c  inverse.c  inverse2.c  josephus.c  life.c  magic-square.c  matrix-mult.c  max.c  mines.c  next-permutation.c  obstacle.c  palindrome.c  pascal.c  pi.c  poi.c  radix.c  series.c  single.c  statistics.c  sudoku.c  sum.c  tiles.c  time.c  tips.c  trace.c  triangle.c
