add_executable(D D.c)
add_executable(pi pi.c)
add_executable(time time.c)
add_executable(gravity gravity.c)
add_executable(change change.c)
add_executable(inverse inverse.c)
add_executable(Julian Julian.c)
add_executable(Equation Equation.c)
add_executable(single single.c)
add_executable(factorial factorial.c)
add_executable(series  series.c)
add_executable(collatz collatz.c)
add_executable(obstacle  obstacle.c)
add_executable(inverse2  inverse2.c)
add_executable(flip flip.c)
add_executable(statistics statistics.c)
add_executable(josephus josephus.c)
add_executable(decimal decimal.c)
add_executable(palindrome palindrome.c)
add_executable(Quick-sort Quick-sort.c)
add_executable(help20 help20.c)
add_executable(sudoku sudoku.c)
add_executable(mines mines.c)
add_executable(trace trace.c)
add_executable(life life.c)
add_executable(matrix-mult matrix-mult.c)
add_executable(sum sum.c)
add_executable(absolute absolute.c)
add_executable(radix radix.c)
add_executable(next-permutation next-permutation.c)
add_executable(magic-square magic-square.c)
add_executable(pascal pascal.c)
add_executable(tiles tiles.c)
add_executable(poi poi.c)
add_executable(max max.c)
add_executable(integration integration.c)
add_executable(triangle triangle.c)




target_link_libraries(pi m)
target_link_libraries(help20 m)
target_link_libraries(gravity m)
target_link_libraries(gravity m)
target_link_libraries(inverse m)
target_link_libraries(Julian m)
target_link_libraries(Equation m)
target_link_libraries(change m)
target_link_libraries(collatz m)
target_link_libraries(factorial m)
target_link_libraries(series m)
target_link_libraries(obstacle m)
target_link_libraries(decimal m)
target_link_libraries(sum m)
target_link_libraries(integration m)
target_link_libraries(triangle m)
